fix footer gap issue

--- a/css/main.css
+++ b/css/main.css
@@ -201,7 +201,12 @@ h1, h2 {
 /****** contact ******/
 
 #contact {
-    display: flex;
+  
+    flex: 1;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    min-height: 100vh;
+
     background-color: #002333;
     color: #fff;
     z-index: 100;
